Update README - typo fix

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a simple project to demonstrate how to forward an incoming sms message to another anroid.
+This is a simple project to demonstrate how to forward an incoming sms message to another android.
 
 It can be also enabled via remote message.
